# ESP32-Stereo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
components/esp32-camera/: .gitignore  CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/esp32-camera/.github/workflows/: build.yml  upload_component.yml
components/esp32-camera/conversions/: to_bmp.c
components/esp32-camera/conversions/include/: img_converters.h
components/esp32-camera/driver/: cam_hal.c  esp_camera.c  sccb-ng.c  sccb.c  sensor.c
components/esp32-camera/driver/include/: esp_camera.h  sensor.h
components/esp32-camera/driver/private_include/: cam_hal.h  sccb.h
components/esp32-camera/examples/camera_example/main/: take_picture.c
components/esp32-camera/sensors/: gc0308.c  hm0360.c  hm1055.c
components/esp32-camera/sensors/private_include/: hm0360.h  hm0360_regs.h  hm0360_settings.h  hm1055.h  hm1055_regs.h  hm1055_settings.h  sc031gs.h
components/esp32-camera/test/: CMakeLists.txt  test_camera.c
main/: CMakeLists.txt
main/include/: acces_point.hpp  camera.hpp  comm_esp_now.hpp  memory.hpp  ntp_sync.hpp  web_server.hpp  wifi.hpp
main/src/: acces_point.cpp  camera.cpp  comm_esp_now.cpp  esp32_cam.cpp  memory.cpp  ntp_sync.cpp  web_server.cpp  wifi.cpp
